--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ os:
 install:
     # install conda
     - if [[ "$TRAVIS_OS_NAME" == "osx"   ]]; then
-        curl https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh;
+        curl https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -o miniconda.sh;
         fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
