--- a/environment.yaml
+++ b/environment.yaml
@@ -2,48 +2,48 @@ name: pycalculator_env
 channels:
   - defaults
 dependencies:
-  - alabaster=0.7.12=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - babel=2.6.0=py36_0
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.11.29=py36_0
-  - cffi=1.11.5=py36h6174b99_1
-  - chardet=3.0.4=py36_1
-  - cryptography=2.4.2=py36ha12b0ac_0
-  - docutils=0.14=py36hbfde631_0
-  - idna=2.8=py36_0
-  - imagesize=1.1.0=py36_0
-  - jinja2=2.10=py36_0
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20170329=hb402a30_2
-  - libffi=3.2.1=h475c297_4
-  - markupsafe=1.1.0=py36h1de35cc_0
-  - ncurses=6.1=h0a44026_1
-  - openssl=1.1.1a=h1de35cc_0
-  - packaging=18.0=py36_0
-  - pip=18.1=py36_0
-  - pycparser=2.19=py36_0
-  - pygments=2.3.1=py36_0
-  - pyopenssl=18.0.0=py36_0
-  - pyparsing=2.3.0=py36_0
-  - pysocks=1.6.8=py36_0
-  - python=3.6.7=haf84260_0
-  - pytz=2018.7=py36_0
-  - readline=7.0=h1de35cc_5
-  - requests=2.21.0=py36_0
-  - setuptools=40.6.3=py36_0
-  - six=1.12.0=py36_0
-  - snowballstemmer=1.2.1=py36h6c7b616_0
-  - sphinx=1.8.2=py36_0
-  - sphinxcontrib=1.0=py36_1
-  - sphinxcontrib-websupport=1.1.0=py36_1
-  - sqlite=3.26.0=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - urllib3=1.24.1=py36_0
-  - wheel=0.32.3=py36_0
-  - xz=5.2.4=h1de35cc_4
-  - zlib=1.2.11=h1de35cc_3
+  - alabaster=0.7.12
+  - asn1crypto=0.24.0
+  - babel=2.6.0
+  - ca-certificates=2018.03.07
+  - certifi=2018.11.29
+  - cffi=1.11.5
+  - chardet=3.0.4
+  - cryptography=2.4.2
+  - docutils=0.14
+  - idna=2.8
+  - imagesize=1.1.0
+  - jinja2=2.10
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - markupsafe=1.1.0
+  - ncurses=6.1
+  - openssl=1.1.1a
+  - packaging=18.0
+  - pip=18.1
+  - pycparser=2.19
+  - pygments=2.3.1
+  - pyopenssl=18.0.0
+  - pyparsing=2.3.0
+  - pysocks=1.6.8
+  - python=3.6.7
+  - pytz=2018.7
+  - readline=7.0
+  - requests=2.21.0
+  - setuptools=40.6.3
+  - six=1.12.0
+  - snowballstemmer=1.2.1
+  - sphinx=1.8.2
+  - sphinxcontrib=1.0
+  - sphinxcontrib-websupport=1.1.0
+  - sqlite=3.26.0
+  - tk=8.6.8
+  - urllib3=1.24.1
+  - wheel=0.32.3
+  - xz=5.2.4
+  - zlib=1.2.11
   - pip:
     - cycler==0.10.0
     - future==0.16.0
