--- a/environment.yaml
+++ b/environment.yaml
@@ -1,17 +1,11 @@
 name: pycalculator_env
 channels:
   - defaults
-  - conda-forge
 dependencies:
-  - ca-certificates=2018.11.29
-  - libcxx=7.0.0
-  - llvm-meta=7.0.0
-  - pytz=2018.9
-  - sphinx=1.8.3
-  - tk=8.6.9
   - alabaster=0.7.12
   - asn1crypto=0.24.0
   - babel=2.6.0
+  - ca-certificates=2018.03.07
   - certifi=2018.11.29
   - cffi=1.11.5
   - chardet=3.0.4
@@ -20,7 +14,6 @@ dependencies:
   - idna=2.8
   - imagesize=1.1.0
   - jinja2=2.10
-  - libcxxabi=4.0.1
   - libedit=3.1.20170329
   - libffi=3.2.1
   - markupsafe=1.1.0
@@ -34,20 +27,23 @@ dependencies:
   - pyparsing=2.3.0
   - pysocks=1.6.8
   - python=3.6.8
+  - pytz=2018.7
   - readline=7.0
   - requests=2.21.0
   - setuptools=40.6.3
   - six=1.12.0
   - snowballstemmer=1.2.1
+  - sphinx=1.8.2
+  - sphinx_rtd_theme=0.4.2
   - sphinxcontrib=1.0
   - sphinxcontrib-websupport=1.1.0
   - sqlite=3.26.0
+  - tk=8.6.8
   - urllib3=1.24.1
   - wheel=0.32.3
   - xz=5.2.4
   - zlib=1.2.11
   - pip:
-    - cycler==0.10.0
     - future==0.16.0
     - h5py==2.7.1
     - keras==2.1.5
@@ -57,9 +53,7 @@ dependencies:
     - numpy==1.14.2
     - pockets==0.7.2
     - python-dateutil==2.7.2
-    - pyyaml==3.13
     - scipy==1.0.1
     - seaborn==0.8.1
-    - sphinx-rtd-theme==0.4.2
     - sphinxcontrib-napoleon==0.7
 
