--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+python:
     - "3.6"
     - "3.7"
 os:
@@ -26,3 +27,6 @@ install:
 
 script:
     - python -m unittest -v tests/test_*.py
+    - cd docs
+    - make doctest
+    - make html
