--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ os:
     - windows
 
 before_install:
-    export PATH="$HOME/miniconda3/bin:$PATH"
+    - export PATH="$HOME/miniconda3/bin:$PATH"
+    # # give execution permissions to travis/install_conda.sh
+    # - chmod +x travis/install_conda.sh
 
 install:
     # install conda with custom script
-    - bash travis/install_conda.sh
+    - bash ./travis/install_conda.sh
 
     # create and activate conda environment
     - conda env create --file environment.yaml
