--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ os:
 before_install:
     # set miniconda3 path on macOS and Linux
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]] || [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-          export PATH="$HOME/miniconda3/bin:$PATH"
+          export PATH="$HOME/miniconda3/bin:$PATH";
       fi
 
 install:
