--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,14 @@ os:
 
 before_install:
     # set miniconda3 path on macOS and Linux
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]] || [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-          export PATH="$HOME/miniconda3/bin:$PATH";
-      fi
+    - export PATH="$HOME/miniconda3/bin:$PATH"
 
 install:
     # install conda with custom script
     - bash travis/install_conda.sh
 
     # create and activate conda environment
-    - conda env create --file environment.yaml
+    - conda env create --file environment.yml
     - source activate pycalculator_env
 
 script:
